Store livebook data local to project

--- a/templates/livebook/devshell.toml
+++ b/templates/livebook/devshell.toml
@@ -6,3 +6,7 @@ packages = [ "livebook" ]
 [[env]]
 name = "LIVEBOOK_HOME"
 eval = "$(realpath .)"
+
+[[env]]
+name = "LIVEBOOK_DATA_PATH"
+eval = "$(realpath .)/.livebook"
