--- a/templates/livebook/.envrc
+++ b/templates/livebook/.envrc
@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 
 watch_file devshell.toml
+mkdir -p .livebook
 
 if [[ $(type -t use_flake) != function ]]; then
   echo "ERROR: use_flake function missing."
