--- a/templates/livebook/.envrc
+++ b/templates/livebook/.envrc
@@ -1,12 +1,5 @@
 #!/usr/bin/env bash
 
 watch_file devshell.toml
-mkdir -p .livebook
-
-if [[ $(type -t use_flake) != function ]]; then
-  echo "ERROR: use_flake function missing."
-  echo "Please update direnv to v2.30.0 or later."
-  exit 1
-fi
-
+mkdir -p .local/livebook
 use flake
