--- a/templates/devenv/.envrc
+++ b/templates/devenv/.envrc
@@ -1,10 +1,11 @@
+#!/usr/bin/env bash
+
 if ! has nix_direnv_version || ! nix_direnv_version 3.0.6; then
   source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.6/direnvrc" "sha256-RYcUJaRMf8oF5LznDrlCXbkOQrywm0HDv1VjYGaJGdM="
 fi
 
-export APP_NAME="app_name"
 export REPO="$(expand_path .)"
-export LOCAL="$REPO/.local"
+export LOCAL="$REPO/local"
 export LOCAL_ENVRC="$LOCAL/.envrc"
 export DEVENV_ROOT_FILE="$(mktemp)"
 
